--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="icon" type="images/png" href="images/iconcar.png" sizes="16x16">
+		<link rel="icon" type="images/png" href="images/iconcar.png" sizes="18x18">
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<title>Davaleba 7</title>
 	</head>
 	<body>
 		<div class="container">
-			<img class="landscape" src="images/landscape.jpg" alt="landscape">
+			<!-- <div class="background"></div> -->
 			<div class="redcar"></div>
 			<div class="bluecar"></div>
 		</div>
