--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<body>
 		<div class="container">
 			<!-- <div class="background"></div> -->
-			<div class="redcar"></div>
+			<div class="redcar">
+				<img src="images/red car.png" alt="redcar">
+			</div>
 			<div class="bluecar"></div>
 		</div>
 	</body>
