--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
 	</head>
 	<body>
 		<div class="container">
-			<!-- <div class="background"></div> -->
-			<div class="redcar">
-				<img src="images/red car.png" alt="redcar">
-			</div>
-			<div class="bluecar"></div>
+			<div class="redcar" alt="redcar"></div>
+			<div class="bluecar" alt="bluecar"></div>
 		</div>
 	</body>
 </html>
