added frames changes images

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="redcar" alt="redcar"></div>
-			<div class="bluecar" alt="bluecar"></div>
+			<div class="pinkcar"></div>
+			<div class="bluecar"></div>
+			<div class="sun"></div>
 		</div>
 	</body>
 </html>
